Fixed alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,6 @@
 }
 
 .header {
-  margin-top: 10%;
+  margin-top: 25vh;
   margin-bottom: 1em;
 }
